# pulse-oximeter

./: Cargo.toml  README.md  build.rs  rust-toolchain.toml
.cargo/: config.toml
cyw43-firmware/: README.md
embassy-lab-utils/: Cargo.toml
embassy-lab-utils/src/: lib.rs  wifi.rs
kicad/: fp-info-cache  pulsoximetru.kicad_pcb  pulsoximetru.kicad_prl  pulsoximetru.kicad_pro  pulsoximetru.kicad_sch  ~pulsoximetru.kicad_sch.lck
src/: irqs.rs  main.rs  max30100.rs
